# Json-Parser

./: jsonParser.cabal
app/: Main.hs
