cabal-version:      3.0
name:               jsonParser
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sergiu Pod
maintainer:         sergiupod@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable jsonParser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.2.1 && <5,
                      megaparsec >=9.0,
                      hspec >=2.11,
                      hspec-megaparsec >=2.2,
                      text >=2.1,
                      scientific >=0.3.8
    hs-source-dirs:   app
    default-language: Haskell2010
